# Userscripts

./: .gitignore  AniHIDE_Hide-Unrelated-Episodes.user.js  AniLINK_GoGoAnime.user.js  Anime__Show_Only_Related_Eps.js  Anime__Show_Only_Related_Eps.user.js  Bing_Automate-Search.user.js  ER4U_Smart-Image-associator.user.js  GoGo Batch Anime Downloader.user.js  GoGoAnime Download Link Extractor.user.js  Google-Classroom_Edit-Course-Names.user.js  LMS_Attendance.user.js
AniCHAT/: AniCHAT_Discuss-Anime-Episodes.user.js  README.md
AniHIDE/: AniHIDE_Hide-Unrelated-Episodes.user.js  README.md
AniLINK/: AniLINK_Episode-Link-Extractor.user.js  AniLINK_GoGoAnime.user.js  DramaLINK_DramaCool.user.js  MyAnimeList_Anime-Streaming-Links-Generator.user.js  README.md  anilink-m3u8.lua  page.html
AniLINK/AniLINK_Downloader/: Cargo.toml  get-m3u.py  go.mod  go.sum  main.go  main.rs
AniLINK/AniLINK_Downloader/golang-v2/: README.md  build.ps1  go.mod
AniLINK/AniLINK_Downloader/golang-v2/cmd/anilink/: main.go  main_test.go  process_unix.go  process_windows.go
AniLINK/AniLINK_Downloader/rust/: Cargo.toml
AniLINK/AniLINK_Downloader/rust/src/: config.rs  downloader.rs  ffmpeg.rs  main.rs  parser.rs  process.rs  tui.rs  types.rs  ui.rs  utils.rs  v1.rs  v2.rs
AniLINK/AniLINK_Downloader/src/: app.rs  config.rs  downloader.rs  m3u.rs  main.rs  ui.rs
AniMARK/: AniMARK_Mark-Episodes.user.js
AnswerIT!!/: AnswerIT!!_Universal-Tab-Switch-Detection-Bypass-and-AI-Answer-Generator.user.js  README.md  Reflector-test.user.js  configure.css  configure.html  reflector.html  reflector_server.py
Bing-AutoGrind/: Bing_AutoGrind.user.js  README.md  close-this-window.html
Bing-Automate-Searches/: Bing_Automate-Search.user.js
ER4U/: .gitignore  ER4U_AI-associator.ipynb  ER4U_AI-associator.user.js  ER4U_Smart-Image-associator.user.js  categories.json  gemini-system-instruction.txt
Jain_LMS/: LMS_Attendance.user.js  LMS_Auto_Login.user.js  README.md
LMS_attendance/: 22CSE306_AI22_ Attendance Report.2.html  22CSE306_AI22_ Attendance Report.html  22CSE306_AI22_ Attendance Report.mhtml  LMS.attendance.bookmarklet.js  LMS.attendance.user.js
Superset/: Assessment-Detection-Bypass-And-AI-Answers.user.js  Readme.md
Yugenanime-Opening-Skipper/: Yugenanime-Opening-Skipper.user.js
