[package]
name = "anilink_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
unicode-width = "0.2.0"
confy = "0.5.1"

# [dependencies]
lazy_static = "1.4.0" # For global static variables like ACTIVE_DOWNLOADS
reqwest = { version = "0.11", features = ["blocking", "json"] } # For HTTP requests
sevenz-rust = "0.4" # For 7zip extraction
dialoguer = "0.10" # For interactive prompts
indicatif = "0.17" # For progress bars
comfy-table = "0.1" # For tables
# regex = "1" # For regular expressions
ctrlc = "3" # For Ctrl+C signal handling
ini = "1.3.0"
# tokio = { version = "1", features = ["sync"] } # For tokio's semaphore if preferred over mpsc