[package]
name = "anilink_downloader"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
console = "0.15"
dialoguer = "0.10"
indicatif = "0.17"
comfy-table = "7.0"
rust-ini = "0.21"
dirs-next = "2.0"
regex = "1.7"
futures-util = "0.3"
ctrlc = { version = "3.2", features = ["termination"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
itertools = "0.10"
path-clean = "1.0"
sanitize-filename = "0.4"
ratatui = "0.28"
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "tlhelp32", "handleapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }